# pulseview-super

./: .travis.yml  CMakeLists.txt  External_Qt5.cmake  External_boost.cmake  External_doxygen.cmake  External_gettext.cmake  External_glib.cmake  External_glibmm.cmake  External_libftdi.cmake  External_libserialport.cmake  External_libsigc++.cmake  External_libsigrok.cmake  External_libsigrokdecode.cmake  External_libusb.cmake  External_libzip.cmake  External_pcre.cmake  External_pkg-config.cmake  External_pulseview.cmake  External_python.cmake  External_sigrok-firmware-fx2lafw.cmake  README.md  pulseview-0.4.0-macassetreader.patch  pulseview.icns  pulseview.plist
.github/workflows/: build-macos.yml
