cmake_minimum_required(VERSION 3.1)
project(PulseView)
include(ExternalProject)

include(External_pkg-config.cmake)
include(External_gettext.cmake)
include(External_glib.cmake)
include(External_libusb.cmake)
include(External_libserialport.cmake)
include(External_libzip.cmake)
include(External_libftdi.cmake)
include(External_doxygen.cmake)
include(External_libsigrok.cmake)
include(External_python.cmake)
include(External_libsigrokdecode.cmake)
include(External_boost.cmake)
include(External_libsigc++.cmake)
include(External_glibmm.cmake)
include(External_Qt5.cmake)
include(External_sigrok-firmware-fx2lafw.cmake)
include(External_pulseview.cmake)

add_executable(pulseview IMPORTED)
set_target_properties(pulseview PROPERTIES IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/dep-install/bin/pulseview)
#install(PROGRAMS ${CMAKE_BINARY_DIR}/dep-install/bin/pulseview DESTINATION bin)

set(CPACK_PACKAGE_VERSION_MAJOR 0)
set(CPACK_PACKAGE_VERSION_MINOR 4)
set(CPACK_PACKAGE_VERSION_PATCH 0)
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "PulseView")
set(CPACK_PACKAGE_EXECUTABLES "pulseview" "PulseView")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "PulseView")
if(WIN32)
	set(CPACK_GENERATOR ZIP NSIS)
elseif(APPLE)
	set(CPACK_GENERATOR Bundle)
	set(CPACK_BUNDLE_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/pulseview.plist)
	set(CPACK_BUNDLE_NAME "PulseView")
	set(CPACK_BUNDLE_ICON ${CMAKE_CURRENT_SOURCE_DIR}/pulseview.icns)
	set(CPACK_BUNDLE_STARTUP_COMMAND ${CMAKE_BINARY_DIR}/ext_pulseview-prefix/src/ext_pulseview-build/pulseview)
else()
	set(CPACK_GENERATOR TGZ)
endif()

include(CPack)
