cmake_minimum_required(VERSION 3.1)
project(PulseView)
include(ExternalProject)

include(External_pkg-config.cmake)
include(External_gettext.cmake)
include(External_glib.cmake)
include(External_libusb.cmake)
include(External_libserialport.cmake)
include(External_libzip.cmake)
include(External_libftdi.cmake)
include(External_doxygen.cmake)
include(External_libsigrok.cmake)
include(External_python.cmake)
include(External_libsigrokdecode.cmake)
include(External_boost.cmake)
include(External_libsigc++.cmake)
include(External_glibmm.cmake)
include(External_Qt5.cmake)
include(External_sigrok-firmware-fx2lafw.cmake)
include(External_pulseview.cmake)

install(PROGRAMS ${CMAKE_BINARY_DIR}/ext_pulseview-prefix/src/ext_pulseview-build/pulseview DESTINATION ${CMAKE_BINARY_DIR}/PulseView.app/Contents/MacOS/ RENAME PulseView)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pulseview.icns DESTINATION ${CMAKE_BINARY_DIR}/PulseView.app/Contents/Resources/ RENAME PulseView.icns)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pulseview.plist DESTINATION ${CMAKE_BINARY_DIR}/PulseView.app/Contents/ RENAME Info.plist)
install(CODE "execute_process(COMMAND ${CMAKE_BINARY_DIR}/dep-install/bin/macdeployqt ${CMAKE_BINARY_DIR}/PulseView.app -dmg -libpath=${CMAKE_BINARY_DIR}/dep-install/lib)")
